--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "Privacy-focused face comparison app",
     "scripts": {
-        "start": "concurrently \"npm run server\" \"npm run client\"",
-        "server": "cd backend && npm run dev",
-        "client": "cd frontend && npm start",
-        "build": "cd frontend && npm run build"
+        "start": "node backend/server.js",
+        "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "server": "npm run dev --prefix backend",
+        "client": "npm start --prefix frontend"
     },
     "devDependencies": {
         "concurrently": "^8.2.2"
