--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Privacy-focused face comparison app",
     "scripts": {
         "start": "node backend/server.js",
-        "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
+        "build": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "server": "npm run dev --prefix backend",
         "client": "npm start --prefix frontend"
